style/global.scss
@use "../../planet4-master-theme/assets/src/scss/base/_variables.scss" as *;

:root {
  --font-family-secondary: "Work Sans";
  --font-family-tertiary: "Work Sans";
  --font-family-button: "Work Sans";
  --footer-menu--li--font-size: 15px;
}


h3,
h4,
h5,
h6 {
  &,
  a,
  a:active,
  a:visited,
  a:hover {
    font-family: var(--font-family-secondary), sans-serif;
  }
}

@media (min-width: 1600px) {
  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl,
  .container-xxl {
    &:not(.narrow-container) {
      max-width: 1600px;
    }
  }
}

.has-small-font-size {
  line-height: var(--line-height-s--font-family-tertiary);
}

/* SEE: ../planet4-master-theme/assets/src/scss/pages/post/_article-content.scss */
@media (min-width: 576px) {
  .page-content {
    .alignright,
    .alignleft {
      padding-top: 6px;
      max-width: 100%;
    }

    .alignright {
      float: right;
      margin: 0 0 $sp-1 $sp-1;
    }

    .alignleft {
      float: left;
      margin: 0 $sp-1 $sp-1 0;
    }
  }
}

/* SEE: planet4/plugins/planet4-plugin-gutenberg-blocks/assets/src/styles/blocks/core-overrides/Image.scss */
.wp-block-image {
  &.is-style-rounded-180 img {
    max-width: 180px;
  }

  &.is-style-rounded-90 img {
    max-width: 90px;
  }
}

.large-excerpt {
  &,
  & * {
    -webkit-line-clamp: 10 !important;
  }
}

.wp-block-columns {
  @media (max-width: 992px) {
    flex-direction: column;
  }
}

